# nabda

./: .env.example  .gitignore  Makefile  PRODUCT_OVERVIEW.md  PRODUCT_PRESENTATION.html  PWA_FONDATIONS_ARCHITECTES.html  README.md  check_connection_temp.py  check_schema.py  debug_jira_access.py  prompt.md  pyproject.toml
config/: __init__.py  jira_config.yaml  model_config.yaml  settings.py
prompts/agents/: agent_decision.j2  decompose_intent.j2  intervention_summary.j2
prompts/developer/: workload_summary.j2
prompts/morning/: briefing.md
prompts/sprint/: explain_risk.j2  suggest_priorities.j2
prompts/system/: analyst.j2  base.j2
prompts/ticket/: summarize.j2
scripts/: enhance_data.py  generate_realistic_data.py  generate_test_data.py  reassign_tickets.py  run_dashboard_tests.py  test_burnout.py  test_delivery.py  test_strategic_gap.py
src/: __init__.py
src/actions/: __init__.py
src/cli/: __init__.py  app.py  formatters.py
src/cli/commands/: __init__.py  analyze.py  morning.py  predict.py  report.py  sync.py
src/dashboard/: __init__.py  app.py  new_app.py  utils.py
src/dashboard/components/: __init__.py  page_guide.py
src/dashboard/pages/: 0_🏆_Executive_Cockpit.py  10_🌅_Good_Morning.py  11_🎖️_Scrum_Master_HQ.py  11_🚀_CEO_Command_Center.py  12_⚡_Daily_Action_Intelligence.py  12_👤_One_on_One_Hub.py  13_⏱️_Scope_Negotiator.py  16_📬_Waiting_On_Inbox.py  17_🔫_Blocker_Assassin.py  18_💫_Relationship_Pulse.py  (+26 more)
src/data/: __init__.py  loader.py  queries.py  schema.py
src/features/: __init__.py  burnout_models.py  delivery_forecast.py  delta_engine.py  developer_features.py  pipeline.py  sprint_features.py  strategic_alignment.py  ticket_features.py  weather_engine.py  work_agents.py
src/intelligence/: __init__.py  classifier.py  cli.py  llm_client.py  morning_briefing.py  orchestrator.py  prompts.py
src/interface/: __init__.py
src/jira_client/: __init__.py  auth.py  fetcher.py  rate_limiter.py  sync.py
src/models/: __init__.py  predictor.py  sprint_risk.py  ticket_estimator.py  trainer.py  workload_scorer.py
tests/: __init__.py  conftest.py
tests/test_cli/: test_app.py  test_formatters.py
tests/test_dashboard/: __init__.py  conftest.py  test_components.py  test_console_errors.py  test_html_validation.py  test_pages.py  test_smoke.py
tests/test_features/: test_sprint_features.py  test_ticket_features.py
tests/test_intelligence/: __init__.py  test_llm_client.py  test_orchestrator.py  test_prompts.py
tests/test_jira_client/: __init__.py  test_auth.py
tests/test_models/: test_sprint_risk.py  test_ticket_estimator.py  test_workload_scorer.py
(+5 files in other folders)
