[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-copilot"
version = "0.1.0"
description = "AI-powered Jira Co-pilot for predictive project management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jira Copilot Team"}
]
keywords = ["jira", "ai", "project-management", "ml", "analytics"]

dependencies = [
    # Jira Integration
    "jira>=3.10.0",
    "tenacity>=8.0.0",
    "apscheduler>=3.11.0",

    # Storage & Analytics
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",

    # Machine Learning
    "scikit-learn>=1.4.0",
    "lightgbm>=4.0.0",
    "optuna>=3.6.0",
    "sentence-transformers>=2.2.0",
    "xgboost>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # LLM & NLP (Gemini)
    "google-generativeai>=0.8.0",
    "tiktoken>=0.7.0",

    # Interface
    "streamlit>=1.35.0",
    "rich>=13.0.0",
    "typer>=0.12.0",

    # Utils
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[project.scripts]
jira-copilot = "src.cli.app:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
